# rtm-examples

./: .gitrepo  Cargo.toml  README.md  status.do
crates/cqrs01/: Cargo.toml  README.md
crates/cqrs02/: Cargo.toml  README.md
crates/cqrs03/: Cargo.toml  README.md  entities.do  mtr.do  rtm.do
crates/cqrs03/entities/: Cargo.toml
crates/cqrs03/entities/src/: active_admin_comments.rs  clients.rs  customers.rs  default.rs.do  event_store_events.rs  event_store_events_in_streams.rs  invoice_items.rs  invoices.rs  mod.rs  order_lines.rs  orders.rs  orders_customers.rs  prelude.rs  products.rs  refinery_schema_history.rs  shipments.rs  shipments_orders.rs
crates/cqrs03/inventory/: Cargo.toml
crates/cqrs03/inventory/src/: lib.rs
crates/cqrs03/inventory/src/aggregates/: inventory_entry.rs  reservation.rs
crates/cqrs03/inventory/test/: check_availability_test.rb  complete_reservation_test.rb  supply_test.rb  test_helper.rb
crates/cqrs03/migration/: refinery.toml
crates/cqrs03/migrations/: Cargo.toml
crates/cqrs03/rtm/: Cargo.toml
crates/cqrs04/: Cargo.toml  README.md
crates/cqrs04/account/: Cargo.toml
crates/cqrs04/mtr/: Cargo.toml
crates/cqrs04/mtr/mtr-entities/: Cargo.toml
crates/cqrs04/mtr/src/: application.rs  application.rsi  lib.rs
crates/cqrs04/src/: application.rs  domain.rs  grpc.rs  lib.rs  main.rs
crates/cqrs05/: Cargo.toml  README.md
crates/cqrs05/src/: blog.rs  lib.rs
crates/cqrs05/src/author/: author.rs  author_command_handler.rs  commands.rs  events.rs
crates/cqrs05/src/post/: commands.rs  events.rs  post.rs  post_command_handler.rs
crates/cqrs05/src/usernames/: events.rs  usernames.rs
tests/: lib.rs
(+20 files in other folders)
