[package]
name = "mtr"
version = "0.0.0"
rust_version = "1.56.0"
edition = "2021"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.52"
eventually = { git = "https://github.com/get-eventually/eventually-rs" }
mtr_entities = { path = "./mtr_entities", package = "mtr_entities"}
rust_decimal = "1.18.0"
thiserror = "1.0.30"

[dev-dependencies]

[build-dependencies]
