[package]
name = "mtr"
version = "0.0.0"
rust_version = "1.56.0"
edition = "2021"
readme = "README.md"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.51"
async-trait = "0.1.52"
eventually = { git = "https://github.com/get-eventually/eventually-rs" }
mtr_entities = { path = "./mtr-entities", package = "mtr_entities"}
mtr_account = { path = "./mtr-account", package = "mtr_account"}
rust_decimal = "1.18.0"
thiserror = "1.0.30"
tokio = { version = "1.13.0", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]

[build-dependencies]
